--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
@@ -132,13 +132,13 @@
     
     <div id="shangcibulingjinshi" style="width: 800px;height:400px;display: none;"></div>
     
-    <div id="gejinshi" style="width: 800px;height:400px;"></div>
+    <div id="gejinshi" style="width: 800px;height:400px;display: none;"></div>
     
- 	<div id="gebuliang" style="width: 800px;height:400px;"></div>
+ 	<div id="gebuliang" style="width: 800px;height:400px;display: none;"></div>
  	
- 	<div id="nianling" style="width: 800px;height:400px;"></div>
+ 	<div id="nianling" style="width: 800px;height:400px;display: none;"></div>
     
-    <div id="nannv" style="width: 800px;height:400px;"></div>
+    <div id="nannv" style="width: 800px;height:400px;display: none;"></div>
 	
 	
 	<div th:include="include::footer"></div>
