--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/二维码.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/二维码.html
@@ -27,7 +27,7 @@
 <head></head>
 <body style="width: 224px; border:1px solid #000000;">
 
-	<div style="float: left;width:90%; margin-left: 8px; margin-top: 30px;position: relative;border:2px solid #000000;"">
+	<div style="float: left;width:90%; margin-left: 8px; margin-top: 30px;position: relative;border:2px solid #000000;">
 		<img alt="" th:src="${QRCode}" style="width: 100% !important; height: auto !important;">
 		<table cellspacing="0" cellpadding="0" style=" width: 100%;border-top: 1px solid #000000;">
 			<tbody>
