--- a/shaicha-manager/src/main/resources/templates/main.html
+++ b/shaicha-manager/src/main/resources/templates/main.html
@@ -33,7 +33,7 @@
     				<i class="iconfont icon-yonghuguanli1"></i>
     			</p>
     			<p class="itemLs">
-	    			<span>2020年下半年示范校筛查系统</span>
+	    			<span>2021年上半年示范校筛查系统</span>
 	    			<span id="shifanxiao"></span>
     			</p>
     		</div>
