--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/dengdaigrade.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/dengdaigrade.html
@@ -18,6 +18,7 @@
 						<input id="activityId" name="activityId" th:value="${activityId}" type="hidden">
 						<input id="grade" name="grade" th:value="${grade}" type="hidden">					
 						<input id="type" name="type" th:value="${type}" type="hidden">
+						<input id="Stype" name="Stype" th:value="${Stype}" type="hidden">
 						<input id="stuclass" name="stuclass" th:value="${stuclass}" type="hidden">
 						<div class="box">
 							  <h4>正在整理数据,请您稍候 ...</h4>   
@@ -47,7 +48,7 @@
 																	+"&stuclass="+$("#stuclass").val()
 		}
 		if(type == 5){
-			window.location.href= "/studentReportNew/shaichawenjuan?activityId="+$("#activityId").val()
+			window.location.href= "/studentReportNew/shaichawenjuan?activityId="+$("#activityId").val()+"&Stype="+$("#Stype").val()+"&school="+$("#school").val()
 																	
 		}
 													
