--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
@@ -96,6 +96,11 @@
                             <select class="form-control" name="shili" id="shili" >
                                 <option value="">请选择</option>
                                 <option value="jinshi">近视</option>
+                                <option value="jiaxing">假性</option>
+                                <option value="linchuang">临床</option>
+                                <option value="buliang">不良</option>
+                                <option value="zhengchang">正常</option>
+                                <option value="nocheck">未检</option>
                             </select>
                         </div>
 						<!--style="display:none"  data-live-search="true" data-actions-box="false" type="hidden"-->
