--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
@@ -89,6 +89,9 @@
 									<select name="Stype" id="Stype" class="selectpicker show-tick form-control" data-live-search="false" data-actions-box="false" data-size="5">
                                         <option value="">请选择</option>
 		                        		<option value="jinshi">近视</option>
+		                        		<option value="didu">低度</option>
+		                        		<option value="zhongdu">中度</option>
+		                        		<option value="gaodu">高度</option>
 		                        		<option value="jiaxing">假性</option>
 		                        		<option value="linchuang">临床</option>
 		                        		<option value="buliang">不良</option>
