--- a/shaicha-manager/src/main/resources/templates/login.html
+++ b/shaicha-manager/src/main/resources/templates/login.html
@@ -38,18 +38,12 @@
                 <h3>
                     儿童青少年近视<strong>防控</strong>
                 </h3>
+                <img src="https://dm-em03.obs.cn-north-4.myhuaweicloud.com/xl-img/772d78bb-3550-4076-8a64-b7eb953c4f12.png" width="200" height="145"
+                     style="border-top-width: 0px;border-top-style: solid;border-bottom-width: 0px;border-bottom-style: solid;border-right-width: 0px;border-right-style: solid;border-left-width: 0px;border-left-style: solid;padding-top: 0px;padding-left: 30px;padding-bottom: 0px;padding-right: 15px;">
                 <ul class="m-b">
-                   <!--  <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>
-                        springBoot
-                    </li>
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> mybatis</li>
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> shiro</li>
                     <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>
-                        thymeleaf
+                        筛查APP二维码
                     </li>
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>
-                        bootstrap
-                    </li> -->
                 </ul>
             </div>
         </div>
