--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/mingdan.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/mingdan.html
@@ -24,6 +24,19 @@
 								<span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:Calibri;
 								mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
 								mso-font-kerning:1.0000pt;">
+									序号
+								</span>
+                    </p>
+                </td>
+                <td width=51 valign=center rowspan=2 style="width:38.7000pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:1.0000pt solid windowtext;
+						mso-border-left-alt:0.5000pt solid windowtext;border-right:1.0000pt solid windowtext;mso-border-right-alt:0.5000pt solid windowtext;
+						border-top:1.0000pt solid windowtext;mso-border-top-alt:0.5000pt solid windowtext;border-bottom:1.0000pt solid windowtext;
+						mso-border-bottom-alt:0.5000pt solid windowtext;">
+                    <p class=MsoNormal align=center style="text-indent:0.0000pt;mso-char-indent-count:0.0000;text-autospace:ideograph-numeric;
+							mso-pagination:none;text-align:center;">
+								<span style="mso-spacerun:'yes';font-family:宋体;mso-ascii-font-family:Calibri;
+								mso-hansi-font-family:Calibri;mso-bidi-font-family:'Times New Roman';font-size:10.5000pt;
+								mso-font-kerning:1.0000pt;">
 									姓名
 								</span>
                     </p>
@@ -81,6 +94,9 @@
 								</span>
                     </p>
                 </td>
+
+
+
                 <td width=155 valign=center colspan=3 style="width:116.2500pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:none;
 						mso-border-left-alt:none;border-right:1.0000pt solid windowtext;mso-border-right-alt:0.5000pt solid windowtext;
 						border-top:1.0000pt solid windowtext;mso-border-top-alt:0.5000pt solid windowtext;border-bottom:1.0000pt solid windowtext;
@@ -107,6 +123,7 @@
 								</span>
                     </p>
                 </td>
+
                 <td width=51 valign=center rowspan=2 style="width:38.7500pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:none;
 						mso-border-left-alt:none;border-right:1.0000pt solid windowtext;mso-border-right-alt:0.5000pt solid windowtext;
 						border-top:1.0000pt solid windowtext;mso-border-top-alt:0.5000pt solid windowtext;border-bottom:1.0000pt solid windowtext;
@@ -120,6 +137,7 @@
 								</span>
                     </p>
                 </td>
+
             </tr>
             <tr style="height:33.1000pt;">
                 <td width=51 valign=center style="width:38.7500pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:none;
@@ -196,6 +214,19 @@
 <script type="text/javascript" th:inline="javascript">
     var data = [[${data}]];
     var html = '<tr style="height:22.6000pt;">\n' +
+        '<td width=51 valign=center rowspan=2 style="width:38.7000pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:1.0000pt solid windowtext;\n' +
+        '\t\t\t\t\t\tmso-border-left-alt:0.5000pt solid windowtext;border-right:1.0000pt solid windowtext;mso-border-right-alt:0.5000pt solid windowtext;\n' +
+        '\t\t\t\t\t\tborder-top:1.0000pt solid windowtext;mso-border-top-alt:0.5000pt solid windowtext;border-bottom:1.0000pt solid windowtext;\n' +
+        '\t\t\t\t\t\tmso-border-bottom-alt:0.5000pt solid windowtext;">\n' +
+        '                    <p class=MsoNormal align=center style="text-indent:0.0000pt;mso-char-indent-count:0.0000;text-autospace:ideograph-numeric;\n' +
+        '\t\t\t\t\t\t\tmso-pagination:none;text-align:center;">\n' +
+        '\t\t\t\t\t\t\t\t<span style="mso-spacerun:\'yes\';font-family:宋体;mso-ascii-font-family:Calibri;\n' +
+        '\t\t\t\t\t\t\t\tmso-hansi-font-family:Calibri;mso-bidi-font-family:\'Times New Roman\';font-size:10.5000pt;\n' +
+        '\t\t\t\t\t\t\t\tmso-font-kerning:1.0000pt;">\n' +
+        '\t\t\t\t\t\t\t\t\t序号\n' +
+        '\t\t\t\t\t\t\t\t</span>\n' +
+        '                    </p>\n' +
+        '                </td>\n' +
         '                <td width=51 valign=center rowspan=2 style="width:38.7000pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:1.0000pt solid windowtext;\n' +
         '\t\t\t\t\t\tmso-border-left-alt:0.5000pt solid windowtext;border-right:1.0000pt solid windowtext;mso-border-right-alt:0.5000pt solid windowtext;\n' +
         '\t\t\t\t\t\tborder-top:1.0000pt solid windowtext;mso-border-top-alt:0.5000pt solid windowtext;border-bottom:1.0000pt solid windowtext;\n' +
@@ -372,6 +403,19 @@
     if (data!=null){
         for (var i = 0;i<data.length;i++){
             html+='<tr style="height:23.3500pt;">\n' +
+                '<td width=51 valign=center rowspan=2 style="width:38.7000pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:1.0000pt solid windowtext;\n' +
+                '\t\t\t\t\t\tmso-border-left-alt:0.5000pt solid windowtext;border-right:1.0000pt solid windowtext;mso-border-right-alt:0.5000pt solid windowtext;\n' +
+                '\t\t\t\t\t\tborder-top:1.0000pt solid windowtext;mso-border-top-alt:0.5000pt solid windowtext;border-bottom:1.0000pt solid windowtext;\n' +
+                '\t\t\t\t\t\tmso-border-bottom-alt:0.5000pt solid windowtext;">\n' +
+                '                    <p class=MsoNormal align=center style="text-indent:0.0000pt;mso-char-indent-count:0.0000;text-autospace:ideograph-numeric;\n' +
+                '\t\t\t\t\t\t\tmso-pagination:none;text-align:center;">\n' +
+                '\t\t\t\t\t\t\t\t<span style="mso-spacerun:\'yes\';font-family:宋体;mso-ascii-font-family:Calibri;\n' +
+                '\t\t\t\t\t\t\t\tmso-hansi-font-family:Calibri;mso-bidi-font-family:\'Times New Roman\';font-size:10.5000pt;\n' +
+                '\t\t\t\t\t\t\t\tmso-font-kerning:1.0000pt;">\n' +
+                (i+1)  +
+                '\t\t\t\t\t\t\t\t</span>\n' +
+                '                    </p>\n' +
+                '                </td>\n' +
                 '                <td width=51 valign=center rowspan=2 style="width:38.7000pt;padding:0.0000pt 5.4000pt 0.0000pt 5.4000pt ;border-left:1.0000pt solid windowtext;\n' +
                 '\t\t\t\t\t\tmso-border-left-alt:0.5000pt solid windowtext;border-right:1.0000pt solid windowtext;mso-border-right-alt:0.5000pt solid windowtext;\n' +
                 '\t\t\t\t\t\tborder-top:none;mso-border-top-alt:none;border-bottom:1.0000pt solid windowtext;\n' +
