--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/xuexiao.html
@@ -97,6 +97,7 @@
 		                        		<option value="buliang">不良</option>
 		                        		<option value="zhengchang">正常</option>
 		                        		<option value="nocheck">未检</option>
+		                        		<option value="bianhao">编号</option>
 		                    		</select>
 								</span>
                                 </div>
